--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <div class="container">
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
+      
       <li class="nav-item"><a routerLink="" class="nav-link" aria-current="page">Bienvenido</a></li>
       <li class="nav-item"><a routerLink="login" class="nav-link">Login</a></li>
       <li class="nav-item"><a routerLink="error" class="nav-link">Error</a></li>
     </ul>
   </header>
 </div>
-
+<div>
+  <h2>Alumno: Pantano Nicolas</h2>
+</div>
 <div>
 <h4>Edad uno</h4>
 <input type="text" id="edadUno" placeholder="Edad uno" [(ngModel)]="edadUno">
